<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNotitaActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDenumireNotita"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/hintDenumireNotita"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/black"
        app:counterTextColor="@color/light_blue"
        app:boxBackgroundColor="#4864B5F6"
        app:boxStrokeColor="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etDenumireNotita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilContinut"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hintContinut"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/black"
        app:counterTextColor="@color/light_blue"
        app:boxBackgroundColor="#4864B5F6"
        app:boxStrokeColor="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilDenumireNotita">

        <EditText
            android:id="@+id/etContinut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:minHeight="450dp"
            android:gravity="top|left"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSalveazaNotitaNoua"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:text="@string/btnSalveazaNotitaNoua"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:background="@drawable/buton_albastru"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilContinut" />
</androidx.constraintlayout.widget.ConstraintLayout>